selfhost/test/parser/map_error_no_rbrace.out
Error at %FILE_NAME%:1:12
Unexpected token ']', expected one of ',', '}':
  |  { abc: 123 ]
                ^